fixed issue with icon not showing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 :root {
 	--clr-primary-400: hsl(158, 36%, 37%);
-	--clr-secondary-200: hsl(30, 38%, 92%);
+	--clr-primary-500: hsl(158, 36%, 20%);
+  --clr-secondary-200: hsl(30, 38%, 92%);
 
 	--clr-neutral-900: hsl(212, 21%, 14%);
 	--clr-neutral-400: hsl(228, 12%, 48%);
@@ -41,20 +42,30 @@ body {
 .button {
   cursor: pointer;
   text-decoration: none;
-  display: inline;
+  display: inline-flex;
+  gap: 0.75rem;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
-  justify-content: center;
+
   border: 0;
   border-radius: 0.5rem;
-  padding: 0.5em 1.5em;
+  padding: 0.75em 1.5em;
   background-color: var(--clr-primary-400);
   color: var(--clr-neutral-100);
   font-weight: var(--fw-bold);
   font-size: 0.925rem;
 }
 
+.button[data-icon="shopping-cart"]::before {
+  content: "";
+  background-image: url("images/icon-cart.svg");
+  width: 15px;
+  height: 16px;
+}
+
+.button:is(:hover, :focus) {
+  background-color: var(--clr-primary-500);
+}
 
 /* prouduct styles */
 .product {
